[package]
name = "pareeksha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
colored = "2.1.0"
getopts = "0.2.21"
indicatif = "0.17.8"
quick-js = "0.4.1"
regex = "1.10.4"
reqwest = { version = "0.11.26", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
