[package]
name = "satyanaash"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.1"
#bharat-cafe = "0.1.4"
bharat-cafe = "0.2.1"
calamine = "0.24.0"
colored = "2.1.0"
deno_core = "0.283.0"
getopts = "0.2.21"
indicatif = "0.17.8"
infer = "0.16.0"
regex = "1.10.4"
reqwest = { version = "0.11.26", features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
